manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyoba-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nyoba-echo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nyoba-echo
    spec:
      containers:
      - name: nyoba-echo
        image: rudirahmat07/golangechov2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
