manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyoba-echo
spec:
  selector:
    app: nyoba-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
